# python-timeout-iterator

./: .gitignore  .gitignore.in  .octocov.yml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: gitignore-in.yml  happy.yml  octocov.yml  pypi-publish.yml  python-test.yml  spellcheck.yml
tests/: test_terminate.py  test_without_terminate.py
timeout_iterator/: __init__.py  _seconds.py  terminate.py  without_terminate.py
