[project]
name = "timeout-iterator"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = []
description = "Iterator with timeout"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
authors = [
    {name = "Yui KITSU", email = "kitsuyui+github@kitsuyui.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/kitsuyui/python-timeout-iterator"

[tool.setuptools]
package-data = { "timeout_iterator" = ["py.typed"], "*" = ["README.md, LICENSE"] }
package-dir = { "timeout_iterator" = "timeout_iterator" }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "poethepoet",
    "setuptools-scm",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "timeout_iterator/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.poe.tasks]
test = "pytest"
coverage-xml = "pytest --cov=timeout_iterator --doctest-modules --cov-report=xml"
format = "ruff format timeout_iterator tests"
check = [
    { cmd = "ruff check timeout_iterator tests" },
    { cmd = "mypy timeout_iterator tests" },
]
build = "python -m build"

[tool.mypy]
strict = true
ignore_missing_imports = false

[tool.ruff]
line-length = 79
