[project]
name = "timeout-iterator"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = []
description = "Iterator with timeout"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
authors = [
    {name = "Yui KITSU", email = "kitsuyui+github@kitsuyui.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/kitsuyui/python-timeout-iterator"

[tool.setuptools]
package-data = { "timeout_iterator" = ["py.typed"], "*" = ["README.md, LICENSE"] }
package-dir = { "timeout_iterator" = "timeout_iterator" }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "poethepoet",
    "setuptools-scm",
    "ruff",
    "mypy",
]

[tool.uv]
# Source of truth:
# https://github.com/kitsuyui/kitsuyui/wiki/Official-Information-for-Dependency-Update-Policies
# PyPI policy in this repo uses a 2 day quarantine window.
exclude-newer = "2 days"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "timeout_iterator/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.poe.tasks]
test = "pytest"
coverage-xml = "pytest --cov=timeout_iterator --doctest-modules --cov-report=xml"
format = "ruff format timeout_iterator tests"
check = [
    { cmd = "ruff check timeout_iterator tests" },
    { cmd = "mypy timeout_iterator tests" },
]
build = "python -m build"

[tool.mypy]
strict = true
ignore_missing_imports = false

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "C90",
    "COM",
    "E",
    "F",
    "I",
    "PERF",
    "PLE",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"timeout_iterator/_version.py" = [
    "RUF022",
]
"tests/**/*.py" = [
    "ANN",
    "D",
    "S101",
]

[tool.ruff.lint.mccabe]
max-complexity = 3
