[metadata]
author = Yui Kitsu
author_email = kitsuyui+github@kitsuyui.com
name = timeout-iterator
description = Iterator with timeout
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
url = https://github.com/kitsuyui/python-timeout-iterator
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License

[options]
packages = timeout_iterator
test_suite = tests
python_requires = >= 3.8

[options.package_data]
* = README.md, LICENSE
timeout_iterator = py.typed, *.pyi
